# MeshSegmentation

./: CMakeLists.txt  Edge.java  Face.java  Graph.java  Makefile  Model.java  Neighbor.java  Point.java  README.md  Solver.java  Utils.java  Vertex.java  g.off  main.cpp  res.off
code/include/io/: MeshReader.h
code/include/model/: Face.h  Mesh.h  Point.h
code/include/seg2off/: seg2off.h
code/include/segmentation/fuzzyClusteringGraphCuts/: Flow.h  GraphMesh.h
code/include/segmentation/regionGrowing/: regionGrowing.h
code/src/cmpSeg/: CMakeLists.txt  cmp.cpp
code/src/io/: MeshReader.cpp
code/src/model/: Face.cpp  Indices.cpp  Mesh.cpp  Point.cpp
code/src/seg2off/: CMakeLists.txt  main.cpp  seg2off.cpp
code/src/segmentation/fuzzyClusteringGraphCuts/: CMakeLists.txt  GraphMesh.cpp  main.cpp
code/src/segmentation/regionGrowing/: CMakeLists.txt  main.cpp  regionGrowing.cpp
code/src/util/: Util.cpp
include/: Edge.h  Face.h  Graph.h  Model.h  Neighbor.h  Point.h  Reader.h  Solver.h  Solver2.h  SolverK.h  Util.h  Vertex.h  Writer.h
include/io/: MeshReader.h  MeshWriter.h
include/model/: Edge.h  Face.h  Indices.h  Mesh.h  Vertex.h
include/segmentation/fuzzyClusteringGraphCuts/: GraphMesh.h
include/segmentation/graph/: Graph.h
include/util/: Util.h
mesh/: humanoid_tri.off
src/: Edge.cpp  Face.cpp  Graph.cpp  GraphCut.java  Model.cpp  Neighbor.cpp  Point.cpp  Reader.cpp  Solver.cpp  Solver2.cpp  SolverK.cpp  Util.cpp  Vertex.cpp  Writer.cpp
src/ModelLib/: Edge.java  Face.java  Graph.java  Model.java  Point.java  Solver.java  Solver2.java  SolverK.java  Utils.java  Vertex.java
src/io/: MeshReader.cpp  MeshWriter.cpp  Reader.java  Writer.java
src/model/: Edge.cpp  Face.cpp  Mesh.cpp  Vertex.cpp
src/segmentation/fuzzyClusteringGraphCuts/: Flow.cpp
src/segmentation/graph/: Graph.cpp  main.cpp
src/util/: Utils.java
